# drumming-training

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  drum_viz  drum_viz.cpp
.github/workflows/: clang-tidy.yml  cmake-single-platform.yml
design/: Drumming App Wireframes.html
docs/: wireframe.html
docs/superpowers/plans/: 2026-07-10-diagnostic-scoring-log.md
docs/superpowers/specs/: 2026-07-10-diagnostic-scoring-log-design.md
include/drumming/: audio.h  color.h  constants.h  diagnostic_logger.h  draw.h  geometry.h  midi.h  persistence.h  scoring.h  types.h
resources/: AppIcon.icns
specs/: stats_improvements.md
src/: audio.cpp  audio.h  controller.cpp  controller.h  diagnostic_logger.cpp  draw.cpp  geometry.cpp  main.cpp  midi.cpp  persistence.cpp  scoring.cpp  types.cpp
src/ui/: dailytimechart.cpp  dailytimechart.h  homeview.cpp  homeview.h  libraryview.cpp  libraryview.h  mainwindow.cpp  mainwindow.h  staffgridwidget.cpp  staffgridwidget.h  statsview.cpp  statsview.h  theme.h
tests/: test_diagnostic_logger.cpp  test_geometry.cpp  test_midi.cpp  test_persistence.cpp  test_scoring.cpp  test_types.cpp
tools/: drums_in.cpp  sign_and_notarize.sh
